lld/test/core/error-file-attribute.objtxt
# RUN: not lld -core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that unknown file attribute produces a readable error.
#

---
aardvark:           true
defined-atoms:
    - name:         entry
      scope:        hidden
  
...


# CHECK:       error: unknown key 'aardvark'
